hphp/test/slow/array/ban_cast.php.expectf
Fatal error: Invalid cast type: array in %s/ban_cast.php on line 5
